Stop transitions when -moz-transition-property changes to a value that no longer includes the transitioning property.  (Bug 525530)  r=bzbarsky